syntax = "proto3";

option java_multiple_files = true;

option java_package = "com.example.shared";

option java_outer_classname = "PlayerProto";

service Player {
    rpc Sync (stream PlayerSyncRequest) returns (stream PlayerSyncResponse);
}

message PlayerSyncRequest {
    GrpcPlayer player = 1;
}

message PlayerSyncResponse {
    GrpcPlayer otherPlayer = 1;
}

message GrpcPlayer {
    string id = 1;
    string name = 2;
    GrpcLocation location = 3;
}

message GrpcLocation {
    int32 x = 1;
    int32 y = 2;
}
